chore: migrate to pgx
